Fixing bug 233137. Work around the problem with reparenting XPConnect wrappers for XUL elements by just not doing it, like we used not to before the fix for bug 197427 was checked in. r=bzbarsky@mit.edu, sr=dbaron@dbaron.org